# hardware-deal-radar

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
00_inbox/: hardware-deal-radar-project-contex.md
01_harness/: STACK.md
02_context/: BRIEF.md  CONSTRAINTS.md  FACTS.md  GLOSSARY.md  LINKS.md
03_specs/: backlog.md  decisions.md
04_outputs/: 2026-06-30_implementation_v1.md  2026-06-30_planning-specs_v1.md
05_scratch/: 2026-06-30_initial-context-report.md
CONTENEDOR CONTEXT PACK/: .env.example  README.md
codex/: agent-rules.md  goal-01-planning.md  goal-02-implementation.md  implementation-plan.md
config/: marketplaces.example.yaml  marketplaces.yaml  scoring.yaml  searches.example.yaml
docs/: 02-functional-scope.md  03-buying-criteria.md  04-marketplaces-and-sources.md  08-scoring-model.md  CHECKPOINT_HARDWARE_DEAL_RADAR_2026-06-30.md  anti-blocking-protocol.md  architecture-consolidated.md  assumptions.md  credential-strategy.md  data-model-v1.md  implementation-readiness-checklist.md  module-design-v1.md  runbook.md  security.md  technical-decisions.md  troubleshooting.md
scripts/: install-vps.sh  run-once.sh  setup-systemd.sh
specs/: README.md  SPEC-001-project-foundation.md  SPEC-002-config-system.md  SPEC-003-ebay-api-integration.md  SPEC-004-normalization-pipeline.md  SPEC-005-storage-and-deduplication.md  SPEC-006-scoring-engine.md  SPEC-007-alerting-system.md  SPEC-008-cli-interface.md  SPEC-009-scheduling-and-vps-deployment.md  SPEC-010-tests-observability-and-docs.md
tests/: conftest.py  test_alert_decision.py  (+13 more)
(+49 files in other folders)
