[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hardware-deal-radar"
version = "0.1.0"
description = "CLI radar for ThinkPad deals on eBay Europe."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "pyyaml>=6.0.2",
  "rich>=13.7.1",
  "sqlmodel>=0.0.21",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.5.7",
]

[project.scripts]
radar = "hardware_deal_radar.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hardware_deal_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "00_inbox",
  "01_harness",
  "02_context",
  "03_specs",
  "04_outputs",
  "05_scratch",
  "CONTENEDOR CONTEXT PACK",
  "codex",
  "data",
  "runners",
  "shared",
]
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
